--- a/exercicio6.html
+++ b/exercicio6.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         let valorDolar = prompt("Digite o Preço do Dolar em Real(obs: separar com ponto): ")
-        let dolarReal = prompt("Quantos Dolar Voçê tem? ")
+        let dolarReal = prompt("Quantos Dolar Você tem? ")
 
         let convesao = Number(valorDolar)*Number(dolarReal)
 
